# chibi-arena

./: .gitignore  .handoff-phase3.md  AGENTS.md  Cargo.toml  README.md  dev
.github/workflows/: ci.yml
.kiro/skills/: sprint-execution.md
client/: .gitignore  aa2_client.gdextension  aa2_client.gdextension.uid  main.tscn  project.godot
client/tests/: net_smoke.gd  test_combat.gd  test_combat.gd.uid  test_damage_meter.gd  test_draft.gd  test_draft.gd.uid  test_drag_drop.gd  test_equip.gd  test_equip.gd.uid  test_game_flow.gd  test_game_flow.gd.uid  test_runner.gd  test_runner.gd.uid  test_sell.gd  test_shop_mechanics.gd  test_shop_mechanics.gd.uid
crates/aa2-client/: Cargo.toml
crates/aa2-client/src/: bench_ui.rs  board_ui.rs  combat_viewer_ui.rs  damage_meter_ui.rs  dev_console.rs  draft_ui.rs  endgame_ui.rs  game_manager.rs  god_pick_ui.rs  lib.rs  loadout_ui.rs  main_scene.rs  net_client.rs  player_list_ui.rs  scoreboard_ui.rs  shop_ui.rs  ui_helpers.rs
crates/aa2-client/tests/: net_flow.rs
crates/aa2-data/src/: lib.rs
crates/aa2-data/tests/: load_heroes.rs
crates/aa2-ffi/: Cargo.toml
crates/aa2-ffi/src/: lib.rs
crates/aa2-ffi/tests/: ffi_test.rs
crates/aa2-game/: Cargo.toml
crates/aa2-game/src/: combat.rs  damage.rs  draft.rs  economy.rs  game.rs  god.rs  lib.rs  matchup.rs  player.rs  pool.rs  scenario.rs  shop.rs
crates/aa2-game/tests/: fixtures.rs  game_loop.rs  mechanics.rs
crates/aa2-net/: Cargo.toml
crates/aa2-net/src/: lib.rs
crates/aa2-server/: Cargo.toml
crates/aa2-server/src/: lib.rs  main.rs
crates/aa2-server/tests/: game.rs  lobby.rs
crates/aa2-sim/: Cargo.toml
crates/aa2-sim/src/: ability.rs  ai.rs  attack_modifier.rs  buff.rs  cast.rs  effect_spec.rs  lib.rs  pending.rs  unit.rs
crates/aa2-sim/tests/: abilities.rs  ability_validation.rs  buffs.rs  combat.rs  illusions.rs  load_game_data_test.rs
data/abilities/: burrowstrike.ron  chaos_strike.ron  dark_pact.ron  essence_shift.ron  fury_swipes.ron  glaives_of_wisdom.ron  heavenly_grace.ron  rage.ron  ravage.ron  spear_of_mars.ron  spirit_lance.ron
data/gods/: archmage.ron  paladin.ron
data/heroes/: chaos_knight.ron  crystal_maiden.ron  drow.ron  earthshaker.ron  faceless_void.ron  grimstroke.ron  gyrocopter.ron  io.ron  lina.ron  mirana.ron  primal_beast.ron  puck.ron  ringmaster.ron  sand_king.ron  spectre.ron  terrorblade.ron  treant_protector.ron  undying.ron  zeus.ron
docs/: README.md  ability-system.md  architecture.md  game-systems.md  project-plan.md
docs/design/: ability-authoring.md  architecture.md  combat-ai.md  composable-effects.md  ffi-bridge.md  godot-client.md  godot-dev-workflow.md  networking.md  ui-implementation.md  ui-layout.md  unity-client.md
docs/design/testing/: game-scenarios.md  integration-tests.md  sim-fixtures.md
docs/handoffs/: networking-handoff.md  post-composable-effects-handoff.md  post-networking-handoff.md  sprint3-handoff.md  sprint3-prompt.md  sprint4-handoff.md  ui-rebuild.md
docs/runbooks/: networked-smoke.md
docs/specs/: mechanics-reference.md
skills/: add-hero-body.md  adding-abilities.md  sprint-execution.md
unity-aa2/Assets/Scripts/Bridge/: AA2Bridge.cs  GameManager.cs
