[package]
name = "aa2-client"
version = "0.1.0"
edition = "2024"
authors = ["ayuan153"]
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
godot = "0.5"
aa2-game = { path = "../aa2-game" }
aa2-sim = { path = "../aa2-sim" }
aa2-data = { path = "../aa2-data" }
aa2-net = { path = "../aa2-net" }
rand = "0.8"
tokio = { version = "1", features = ["rt", "net", "sync", "macros"] }
tokio-tungstenite = "0.29"
futures-util = { version = "0.3", features = ["sink"] }
serde_json = { workspace = true }


[dev-dependencies]
aa2-server = { path = "../aa2-server" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
